# discord-kuso-quiz-bot

./: Cargo.toml  README.md  rust-toolchain.toml
js/: README.md  index.js  package-lock.json  package.json
src/: bot.rs  handler.rs  lib.rs  main.rs  quiz.rs
src/bot/: bot.rs  bot_impl.rs
src/handler/: handler.rs  handler_impl.rs
src/quiz/: quiz.rs  quiz_impl.rs
